...
        ),
        Spacer(flex: 3),
        FlatButton(
          onPressed: () {
            FirebaseAuth.instance.signOut();
          },
          child: Text('Sign out'),
        ),
        Spacer(),
      ],
    );
  }
}
